# tt-mlir

.github/workflows/: build-and-test.yml
cmake/modules/: ConfigureSphinx.cmake
docs/: CMakeLists.txt  Makefile  autogen-summary.py  html_to_md.py  modules.rst  ttir_builder.rst
docs/source/: api.rst  conf.py  index.rst
docs/src/: getting-started.md
env/patches/: shardy.patch
include/ttmlir/Conversion/TTNNToEmitC/: EmitCConversion.h
include/ttmlir/Dialect/TTIR/IR/: TTIRGenericRegionOps.td  TTIROps.td
lib/Conversion/TTIRToTTIRDecomposition/: TTIRToTTIRDecomposition.cpp  TTIRToTTIRDecompositionPass.cpp
lib/Conversion/TTIRToTTKernel/: TTIRToTTKernel.cpp
lib/Conversion/TTIRToTTNN/: TTIRToTTNN.cpp
lib/Conversion/TTKernelToEmitC/: TTKernelToEmitC.cpp
lib/Conversion/TTNNToEmitC/: TTNNToEmitC.cpp
lib/Dialect/TTCore/IR/: TTCoreOpsTypes.cpp
lib/Dialect/TTIR/IR/: TTIRGenericRegionOps.cpp  TTIROps.cpp
lib/Dialect/TTIR/Transforms/: Allocate.cpp  GenericLowerDMAs.cpp  OptimizeTensorLayout.cpp  TTIRFusing.cpp
lib/Dialect/TTMetal/Pipelines/: TTMetalPipelines.cpp
lib/Dialect/TTNN/Analysis/: DFShardingPolicy.cpp  L1InterleavedAnalysis.cpp
lib/Dialect/TTNN/IR/: TTNNOps.cpp
lib/Dialect/TTNN/Pipelines/: TTNNPipelines.cpp
lib/Dialect/TTNN/Transforms/: CMakeLists.txt  Optimizer.cpp  Passes.cpp  TTNNLayout.cpp  TTNNTraceHoistTransform.cpp
lib/Dialect/TTNN/Utils/: Utils.cpp
lib/OpModel/TTNN/: TTNNOpModel.cpp
python/: CMakeLists.txt
python/ttmlir/dialects/: SdyBinding.td  SdyEnumBinding.td  sdy.py
runtime/lib/: CMakeLists.txt  runtime.cpp
runtime/lib/common/: runtime_context.cpp
runtime/lib/ttmetal/: executor.cpp  executor_utils.h  runtime.cpp
runtime/lib/ttnn/: program_executor.cpp  runtime.cpp
runtime/lib/ttnn/operations/: CMakeLists.txt
runtime/lib/ttnn/types/: types.cpp
runtime/lib/ttnn/utils/: utils.cpp
runtime/python/runtime/: runtime.cpp
runtime/tools/ttrt/: setup.py
test/python/golden/: test_ttir_models.py  test_ttir_ops.py  test_ttir_ops_n300.py
tools/explorer/test/: run_tests.py
tools/pykernel/: ast.py
tools/ttir-builder/: apis.py  builder.py  ops.py  test_optimizer_overrides.py  utils.py
tools/ttnn-standalone/: run  test.cpp  ttnn-precompiled.hpp  ttnn-standalone.cpp  workarounds.hpp
(+41 files in other folders)
